@@ -5,6 +5,7 @@ Amarok ChangeLog
 
 VERSION 2.4.2-Beta 1
   FEATURES:
+    * Added KNotify scripting interface. (BR 260750)
     * Make podcast episodes download filename configurable. Patch by
       Sandeep Raghuraman. (BR 155075)
     * Automatic scrolling in lyrics applet (Thanks to Jan Gerrit Marker)
